--- a/sass/components/_components.scss
+++ b/sass/components/_components.scss
@@ -1,3 +1,11 @@
+/* Header
+--------------------------------------------- */
+@import "content/header";
+
+/* Footer
+--------------------------------------------- */
+@import "content/footer";
+
 /* Navigation
 --------------------------------------------- */
 @import "navigation/navigation";
