--- a/sass/abstracts/variables/_colors.scss
+++ b/sass/abstracts/variables/_colors.scss
@@ -8,9 +8,9 @@ $color__background-ins: #fff9c0;
 $color__text-screen: #21759b;
 $color__text-input: #666;
 $color__text-input-focus: #111;
-$color__link: #4169e1; //royalblue
+// $color__link: #4169e1; //royalblue
 $color__link-visited: #800080; //purple
-$color__link-hover: #191970; //midnightblue
+$color__link-hover:  #bc204b;
 $color__text-main: #404040;
 
 $color__border-button: #ccc #ccc #bbb;
@@ -18,3 +18,6 @@ $color__border-button-hover: #ccc #bbb #aaa;
 $color__border-button-focus: #aaa #bbb #bbb;
 $color__border-input: #ccc;
 $color__border-abbr: #666;
+
+$color-menu-btn--border: #df97ab;
+$color-white-text: #fff;
