--- a/sass/base/elements/_body.scss
+++ b/sass/base/elements/_body.scss
@@ -1,3 +1,8 @@
 body {
+	margin: 0;
+    padding: 0;
+    background: #fff;
+    font-family: Roboto,Arial,sans-serif;
+    font-weight: 400;
 	background: $color__background-body; // Fallback for when there is no custom background color defined.
 }
