--- a/sass/abstracts/variables/_colors.scss
+++ b/sass/abstracts/variables/_colors.scss
@@ -21,3 +21,9 @@ $color__border-abbr: #666;
 
 $color-menu-btn--border: #df97ab;
 $color-white-text: #fff;
+$color-footer-black: #3d3935;
+$color-text-light-grey: #b1b0ae;
+$color-text-grey: #64615d;
+$color-text-gold: #e8b229;
+$color-text-gold-light:#504634;
+$color-text-email-input: #83807e;
