--- a/sass/components/content/_header.scss
+++ b/sass/components/content/_header.scss
@@ -250,7 +250,7 @@
             -moz-transition: all 1s ease-out;
             -ms-transition: all 1s ease-out;
             -o-transition: all 1s ease-out;
-}
+          }
         }
       }
       &-menu {
@@ -262,8 +262,7 @@
         -moz-transition: all 1s ease-in;
         -ms-transition: all 1s ease-in;
         -o-transition: all 1s ease-in;
-        a
-{
+        a {
           font-size: 18px;
         }
 
