--- a/sass/components/content/_posts-and-pages.scss
+++ b/sass/components/content/_posts-and-pages.scss
@@ -24,16 +24,13 @@
 
 
 .main-container {
-    max-width: 1200px;
+    max-width: 1170px;
 	width:95%;
 	margin:0 auto;
 }
 
 .header__container{
-    margin-right: auto;
-    margin-left: auto;
-   
+    margin:0 auto;
     display: flex;
-    
     flex-flow: row wrap;
 }
