add main search field with custom taxonomies

--- a/sass/abstracts/variables/_colors.scss
+++ b/sass/abstracts/variables/_colors.scss
@@ -1,4 +1,4 @@
-$color__background-body: #fff;
+$color__background-body:#f4f4f1;
 $color__background-screen: #f1f1f1;
 $color__background-hr: #ccc;
 $color__background-button: #e6e6e6;
@@ -27,3 +27,8 @@ $color-text-grey: #64615d;
 $color-text-gold: #e8b229;
 $color-text-gold-light:#504634;
 $color-text-email-input: #83807e;
+$color-text-title:#bc204b;
+$color-input-search-bg: #fafaf8;
+$color-input-search-border:#e1e1de;
+$color-text-search-field: #63605c;
+$color-number-light-grey: #3d393566;
