--- a/sass/base/elements/_body.scss
+++ b/sass/base/elements/_body.scss
@@ -3,6 +3,7 @@ body {
     padding: 0;
     background: #fff;
     font-family: Roboto,Arial,sans-serif;
-    font-weight: 400;
+    font-size: 10px;
+    font-weight: 300;
 	background: $color__background-body; // Fallback for when there is no custom background color defined.
 }
