--- a/sass/base/elements/_fields.scss
+++ b/sass/base/elements/_fields.scss
@@ -14,10 +14,11 @@ input[type="datetime"],
 input[type="datetime-local"],
 input[type="color"],
 textarea {
-	color: $color__text-input;
-	border: 1px solid $color__border-input;
-	border-radius: 3px;
+	// color: $color__text-input;
+	// border: 1px solid $color__border-input;
+	// border-radius: 3px;
 	padding: 3px;
+	outline: none;
 
 	&:focus {
 		color: $color__text-input-focus;
