--- a/sass/components/content/_posts-and-pages.scss
+++ b/sass/components/content/_posts-and-pages.scss
@@ -1,36 +1,214 @@
 .sticky {
-	display: block;
+  display: block;
 }
 
 .post,
 .page {
-	margin: 0 0 1.5em;
+  margin: 0 0 1.5em;
 }
 
 .updated:not(.published) {
-	display: none;
+  display: none;
 }
 
 .page-content,
 .entry-content,
 .entry-summary {
-	margin: 1.5em 0 0;
+  margin: 1.5em 0 0;
 }
 
 .page-links {
-	clear: both;
-	margin: 0 0 1.5em;
+  clear: both;
+  margin: 0 0 1.5em;
 }
-
 
 .main-container {
-    max-width: 1170px;
-	width:95%;
-	margin:0 auto;
+  max-width: 1170px;
+  width: 95%;
+  margin: 0 auto;
 }
 
-.header__container{
-    margin:0 auto;
+.header__container {
+  margin: 0 auto;
+  display: flex;
+  flex-flow: row wrap;
+}
+
+main {
+  margin-top: 90px;
+  position: relative;
+  z-index: 50;
+}
+
+.title {
+  text-align: center;
+  margin-bottom: 25px;
+  &__head {
+    font-size: 45px;
+    font-weight: 300;
+    line-height: 1.2;
+    color: $color-text-title;
+    letter-spacing: -1px;
+    padding-top: 80px;
+    margin: 0 0 40px 0;
+  }
+  &__text {
+    font-size: 20px;
+    line-height: 30px;
+    margin: 0 0 0 0;
+  }
+}
+
+.search-main {
+  &-wrap {
     display: flex;
-    flex-flow: row wrap;
+    flex-direction: row;
+    height: 65px;
+  }
+  &__input-wrap {
+    flex-basis: 50%;
+    position: relative;
+    height: 100%;
+    &:before {
+      content: "";
+      width: 30px;
+      height: 30px;
+      position: absolute;
+      left: 5%;
+      top: 25%;
+      background-image: url(assets/image/-e-search.svg);
+      background-repeat: no-repeat;
+      -webkit-background-size: contain;
+      background-size: contain;
+    }
+  }
+  &__input {
+    width: 100%;
+    height: 100%;
+    &[type="text"] {
+      padding: 0 65px;
+      &::placeholder {
+        color: #63605c;
+        font-weight: 300;
+        font-family: "Roboto";
+      }
+    }
+    background-color: $color-input-search-bg;
+    border: 1px solid $color-input-search-border;
+    border-top-left-radius: 30px;
+    border-bottom-left-radius: 30px;
+    color: $color-text-search-field;
+    font-size: 19px;
+    font-weight: 300;
+  }
+  &__input-del {
+    position: absolute;
+    right: 5%;
+    transform: translateY(-50%);
+    top: 50%;
+    width: 20px;
+    height: 20px;
+
+    background-image: url(assets/image/cross.svg);
+    background-repeat: no-repeat;
+    -webkit-background-size: contain;
+    background-size: contain;
+    cursor: pointer;
+    opacity: 0;
+    transition: all 0.3s ease-in;
+    &--show {
+      opacity: 1;
+      transition: all 0.3s ease-in;
+    }
+  }
+  &__dropdown {
+    &-wrap {
+      flex-basis: 25%;
+      position: relative;
+
+      &:hover .search-main__dropdown-btn {
+        border-color: $color-text-title;
+        transition: all 0.3s ease-in;
+        & + .search-main__dropdown-list-wrap {
+          visibility: visible;
+          opacity: 1;
+          transition: all 0.2s ease-in-out;
+        }
+        &:before {
+          transform: rotate(-135deg);
+          border-top-color: $color__link-hover;
+        }
+      }
+    }
+    &-btn {
+      position: relative;
+      display: flex;
+      align-items: center;
+      width: 100%;
+      height: 100%;
+      font-size: 19px;
+      font-weight: 300;
+      color: $color-text-search-field;
+      padding: 0 25px;
+      background-color: $color-input-search-bg;
+      border: 1px solid $color-input-search-border;
+      border-left-color: transparent;
+      transition: all 0.3s ease-in;
+      &:before {
+        content: "";
+        position: absolute;
+        width: 8px;
+        height: 8px;
+        border-left: 1px solid #8b8886;
+        border-top: 1px solid #8b8886;
+        right: 10%;
+        top: calc(50% - 0.175em);
+        transform: rotate(45deg);
+        transition: all 0.3s ease-in;
+      }
+    }
+
+    &-list-wrap {
+      min-width: 100%;
+      position: absolute;
+      top: calc(100% + 10px);
+      right: 0;
+      visibility: hidden;
+      opacity: 0;
+      transition: all 0.2s ease-in;
+      display: flex;
+      padding: 30px;
+      background-color: #fff;
+      border-radius: 30px;
+      box-shadow: 0 10px 50px rgba(0, 0, 0, 0.07);
+    }
+    &-list {
+		width: 100%;
+    }
+    &-item {
+		display: flex;
+		flex-direction:row;
+		justify-content: space-between;
+      font-size: 17px;
+      font-weight: 300;
+	  span {
+		  font-size: 14px;
+    font-weight: 300;
+    text-transform: uppercase;
+	color:$color-number-light-grey;
+	  }
+
+      &--head {
+        font-size: 11px;
+        font-weight: 400;
+        text-transform: uppercase;
+        color: #bc204b;
+      }
+    }
+  }
+
+  & :last-child.search-main__dropdown-wrap .search-main__dropdown-btn {
+    border-top-right-radius: 30px;
+    border-bottom-right-radius: 30px;
+  }
 }
