complete custom select with multiselect and de/select items

--- a/sass/abstracts/variables/_colors.scss
+++ b/sass/abstracts/variables/_colors.scss
@@ -31,4 +31,5 @@ $color-text-title:#bc204b;
 $color-input-search-bg: #fafaf8;
 $color-input-search-border:#e1e1de;
 $color-text-search-field: #63605c;
-$color-number-light-grey: #3d393566;
+$color-number-light-grey: #3d393599;
+$color-text-green:#7bceb1;
