--- a/sass/components/content/_posts-and-pages.scss
+++ b/sass/components/content/_posts-and-pages.scss
@@ -67,8 +67,10 @@ main {
   }
   &__input-wrap {
     flex-basis: 50%;
+    max-width: 50%;
     position: relative;
     height: 100%;
+
     &:before {
       content: "";
       width: 30px;
@@ -100,6 +102,11 @@ main {
     color: $color-text-search-field;
     font-size: 19px;
     font-weight: 300;
+    transition: all 0.3s ease-in;
+    &:focus {
+      border-color: $color-text-title;
+      transition: all 0.3s ease-in;
+    }
   }
   &__input-del {
     position: absolute;
@@ -124,8 +131,9 @@ main {
   &__dropdown {
     &-wrap {
       flex-basis: 25%;
+      max-width: 25%;
       position: relative;
-
+      transition: all 0.3s ease-in;
       &:hover .search-main__dropdown-btn {
         border-color: $color-text-title;
         transition: all 0.3s ease-in;
@@ -142,17 +150,19 @@ main {
     }
     &-btn {
       position: relative;
-      display: flex;
-      align-items: center;
       width: 100%;
       height: 100%;
       font-size: 19px;
       font-weight: 300;
       color: $color-text-search-field;
-      padding: 0 25px;
+      padding: 0 40px 0 25px;
+      text-align: left;
       background-color: $color-input-search-bg;
       border: 1px solid $color-input-search-border;
       border-left-color: transparent;
+      overflow: hidden;
+      white-space: nowrap;
+      text-overflow: ellipsis;
       transition: all 0.3s ease-in;
       &:before {
         content: "";
@@ -182,21 +192,104 @@ main {
       border-radius: 30px;
       box-shadow: 0 10px 50px rgba(0, 0, 0, 0.07);
     }
+
     &-list {
-		width: 100%;
+      width: 100%;
+      &--academy {
+        .search-main__dropdown-item--head {
+          color: $color-text-green;
+        }
+		.search-main__dropdown-item label:not(.checkbox-toggle-label):before {
+			border-color:$color-text-green;
+		}
+		.search-main__dropdown-item label:hover:before {
+			background-color:$color-text-green;
+		}
+		 .search-main__dropdown-item .search-main__dropdown-checkbox:checked + label:before {
+			background-color:$color-text-green;
+			
+		}
+      }
+    }
+    &--double-col {
+      .search-main__dropdown-list {
+        min-width: 190px;
+      }
+      :nth-child(1).search-main__dropdown-list {
+        margin-right: 30px;
+      }
+	
     }
     &-item {
-		display: flex;
-		flex-direction:row;
-		justify-content: space-between;
       font-size: 17px;
       font-weight: 300;
-	  span {
-		  font-size: 14px;
-    font-weight: 300;
-    text-transform: uppercase;
-	color:$color-number-light-grey;
-	  }
+		
+	  
+	  
+
+      label {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+		line-height: 1.8;
+        cursor: pointer;
+        position: relative;
+        &:not(.checkbox-toggle-label):before {
+          content: "";
+          top: 6px;
+          left: 0;
+          width: 18px;
+          height: 18px;
+          border-radius: 6px;
+          border: 1px solid $color-text-title;
+          margin-right: 10px;
+          transition: all 0.3s ease-in;
+          background-size: 11px 10px;
+          background-repeat: no-repeat;
+          background-position: center;
+		  transition: all .3s ease-in;
+		 
+        }
+		 &:hover:before {
+			  background-color: $color-text-title;
+		  }
+		&.checkbox-toggle-label {
+			display: block;
+			padding-top: 12px;
+			
+		}
+
+		
+	
+      }
+
+      input {
+        height: 0;
+        width: 0;
+        position: absolute;
+        opacity: 0;
+        appearance: none;
+      }
+
+      span {
+        margin-left: auto;
+        font-size: 14px;
+        font-weight: 400;
+        text-transform: uppercase;
+        color: $color-number-light-grey;
+        &.toggle {
+			
+          font-size: 12px;
+          text-transform: unset;
+          text-align: left;
+          &-select {
+           display: block;;
+          }
+          &-deselect {
+            display: none;;
+          }
+        }
+      }
 
       &--head {
         font-size: 11px;
@@ -205,9 +298,30 @@ main {
         color: #bc204b;
       }
     }
+
+    &-checkbox {
+      &--toggle {
+        &.hide {
+          + span.toggle-select {
+           display: none;
+          }
+          ~ span.toggle-deselect {
+           display: block;;
+          }
+        }
+      }
+    }
   }
 
-  & :last-child.search-main__dropdown-wrap .search-main__dropdown-btn {
+  .search-main__dropdown-checkbox:checked + label:before {
+
+			background-color:$color-text-title;
+			background-image: url(assets/image/-e-checkmark.svg);
+			transition: all .3s ease-in;
+		}
+
+
+  & :nth-last-child(2).search-main__dropdown-wrap .search-main__dropdown-btn {
     border-top-right-radius: 30px;
     border-bottom-right-radius: 30px;
   }
