--- a/style.css
+++ b/style.css
@@ -1285,6 +1285,7 @@ main {
 
 .search-main__input-wrap {
 	flex-basis: 50%;
+	max-width: 50%;
 	position: relative;
 	height: 100%;
 }
@@ -1312,6 +1313,7 @@ main {
 	color: #63605c;
 	font-size: 19px;
 	font-weight: 300;
+	transition: all 0.3s ease-in;
 }
 
 .search-main__input[type="text"] {
@@ -1322,6 +1324,11 @@ main {
 	color: #63605c;
 	font-weight: 300;
 	font-family: "Roboto";
+}
+
+.search-main__input:focus {
+	border-color: #bc204b;
+	transition: all 0.3s ease-in;
 }
 
 .search-main__input-del {
@@ -1347,7 +1354,9 @@ main {
 
 .search-main__dropdown-wrap {
 	flex-basis: 25%;
+	max-width: 25%;
 	position: relative;
+	transition: all 0.3s ease-in;
 }
 
 .search-main__dropdown-wrap:hover .search-main__dropdown-btn {
@@ -1368,17 +1377,19 @@ main {
 
 .search-main__dropdown-btn {
 	position: relative;
-	display: flex;
-	align-items: center;
 	width: 100%;
 	height: 100%;
 	font-size: 19px;
 	font-weight: 300;
 	color: #63605c;
-	padding: 0 25px;
+	padding: 0 40px 0 25px;
+	text-align: left;
 	background-color: #fafaf8;
 	border: 1px solid #e1e1de;
 	border-left-color: transparent;
+	overflow: hidden;
+	white-space: nowrap;
+	text-overflow: ellipsis;
 	transition: all 0.3s ease-in;
 }
 
@@ -1414,19 +1425,97 @@ main {
 	width: 100%;
 }
 
+.search-main__dropdown-list--academy .search-main__dropdown-item--head {
+	color: #7bceb1;
+}
+
+.search-main__dropdown-list--academy .search-main__dropdown-item label:not(.checkbox-toggle-label):before {
+	border-color: #7bceb1;
+}
+
+.search-main__dropdown-list--academy .search-main__dropdown-item label:hover:before {
+	background-color: #7bceb1;
+}
+
+.search-main__dropdown-list--academy .search-main__dropdown-item .search-main__dropdown-checkbox:checked + label:before {
+	background-color: #7bceb1;
+}
+
+.search-main__dropdown--double-col .search-main__dropdown-list {
+	min-width: 190px;
+}
+
+.search-main__dropdown--double-col :nth-child(1).search-main__dropdown-list {
+	margin-right: 30px;
+}
+
 .search-main__dropdown-item {
-	display: flex;
-	flex-direction: row;
-	justify-content: space-between;
 	font-size: 17px;
 	font-weight: 300;
 }
 
+.search-main__dropdown-item label {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	line-height: 1.8;
+	cursor: pointer;
+	position: relative;
+}
+
+.search-main__dropdown-item label:not(.checkbox-toggle-label):before {
+	content: "";
+	top: 6px;
+	left: 0;
+	width: 18px;
+	height: 18px;
+	border-radius: 6px;
+	border: 1px solid #bc204b;
+	margin-right: 10px;
+	transition: all 0.3s ease-in;
+	background-size: 11px 10px;
+	background-repeat: no-repeat;
+	background-position: center;
+	transition: all .3s ease-in;
+}
+
+.search-main__dropdown-item label:hover:before {
+	background-color: #bc204b;
+}
+
+.search-main__dropdown-item label.checkbox-toggle-label {
+	display: block;
+	padding-top: 12px;
+}
+
+.search-main__dropdown-item input {
+	height: 0;
+	width: 0;
+	position: absolute;
+	opacity: 0;
+	appearance: none;
+}
+
 .search-main__dropdown-item span {
+	margin-left: auto;
 	font-size: 14px;
-	font-weight: 300;
+	font-weight: 400;
 	text-transform: uppercase;
-	color: #3d393566;
+	color: #3d393599;
+}
+
+.search-main__dropdown-item span.toggle {
+	font-size: 12px;
+	text-transform: unset;
+	text-align: left;
+}
+
+.search-main__dropdown-item span.toggle-select {
+	display: block;
+}
+
+.search-main__dropdown-item span.toggle-deselect {
+	display: none;
 }
 
 .search-main__dropdown-item--head {
@@ -1436,7 +1525,21 @@ main {
 	color: #bc204b;
 }
 
-.search-main :last-child.search-main__dropdown-wrap .search-main__dropdown-btn {
+.search-main__dropdown-checkbox--toggle.hide + span.toggle-select {
+	display: none;
+}
+
+.search-main__dropdown-checkbox--toggle.hide ~ span.toggle-deselect {
+	display: block;
+}
+
+.search-main .search-main__dropdown-checkbox:checked + label:before {
+	background-color: #bc204b;
+	background-image: url(assets/image/-e-checkmark.svg);
+	transition: all .3s ease-in;
+}
+
+.search-main :nth-last-child(2).search-main__dropdown-wrap .search-main__dropdown-btn {
 	border-top-right-radius: 30px;
 	border-bottom-right-radius: 30px;
 }
