--- a/sass/components/content/_posts-and-pages.scss
+++ b/sass/components/content/_posts-and-pages.scss
@@ -59,11 +59,12 @@ main {
   }
 }
 
-.search-main {
+.filter-main {
   &-wrap {
     display: flex;
     flex-direction: row;
     height: 65px;
+	margin-bottom: 30px;
   }
   &__input-wrap {
     flex-basis: 50%;
@@ -134,10 +135,10 @@ main {
       max-width: 25%;
       position: relative;
       transition: all 0.3s ease-in;
-      &:hover .search-main__dropdown-btn {
+      &:hover .filter-main__dropdown-btn {
         border-color: $color-text-title;
         transition: all 0.3s ease-in;
-        & + .search-main__dropdown-list-wrap {
+        & + .filter-main__dropdown-list-wrap {
           visibility: visible;
           opacity: 1;
           transition: all 0.2s ease-in-out;
@@ -181,6 +182,7 @@ main {
     &-list-wrap {
       min-width: 100%;
       position: absolute;
+      z-index: 50;
       top: calc(100% + 10px);
       right: 0;
       visibility: hidden;
@@ -196,26 +198,26 @@ main {
     &-list {
       width: 100%;
       &--academy {
-        .search-main__dropdown-item--head {
+        .filter-main__dropdown-item--head {
           color: $color-text-green;
         }
-		.search-main__dropdown-item label:not(.checkbox-toggle-label):before {
+		.filter-main__dropdown-item label:not(.checkbox-toggle-label):before {
 			border-color:$color-text-green;
 		}
-		.search-main__dropdown-item label:hover:before {
+		.filter-main__dropdown-item label:hover:before {
 			background-color:$color-text-green;
 		}
-		 .search-main__dropdown-item .search-main__dropdown-checkbox:checked + label:before {
+		 .filter-main__dropdown-item .filter-main__dropdown-checkbox:checked + label:before {
 			background-color:$color-text-green;
 			
 		}
       }
     }
     &--double-col {
-      .search-main__dropdown-list {
+      .filter-main__dropdown-list {
         min-width: 190px;
       }
-      :nth-child(1).search-main__dropdown-list {
+      :nth-child(1).filter-main__dropdown-list {
         margin-right: 30px;
       }
 	
@@ -313,7 +315,7 @@ main {
     }
   }
 
-  .search-main__dropdown-checkbox:checked + label:before {
+  .filter-main__dropdown-checkbox:checked + label:before {
 
 			background-color:$color-text-title;
 			background-image: url(assets/image/-e-checkmark.svg);
@@ -321,8 +323,80 @@ main {
 		}
 
 
-  & :nth-last-child(2).search-main__dropdown-wrap .search-main__dropdown-btn {
+  & :nth-last-child(2).filter-main__dropdown-wrap .filter-main__dropdown-btn {
     border-top-right-radius: 30px;
     border-bottom-right-radius: 30px;
+  }
+
+  &__posts {
+	  .filter-main{
+		  &__tags{width: 100%;
+			position: relative;
+			//  display: flex;
+			//   flex-direction: row;
+			//   gap: 10px;
+				margin-bottom: 30px;}
+		  &__tag {
+			  display: inline-block;
+			 margin-right: 10px;
+			 margin-bottom: 10px;
+			padding: 5.5px 10px;
+			border: 1px solid  $color-input-search-border;
+			border-radius: 30px;
+			background-color: transparent;
+			font-size: 14px;
+    		font-weight: 400;
+			transition: position .3s ease-in;
+			span {
+				margin-left: 4px;
+				font-size: 14px;
+        font-weight: 400;
+        text-transform: uppercase;
+        color: $color-number-light-grey;
+        transition: all .3s ease-in;
+			}
+
+      &:hover {
+        color:$color-white-text;
+        border-color:$color-text-title;
+        background-color: $color-text-title;
+        	transition: all .3s ease-in;
+        span {
+        color:$color-white-text;
+        	transition: all .3s ease-in;
+
+        }
+      }
+				
+			&.tag-hide{
+				opacity: 0;
+				position: absolute;
+				z-index: -1;
+				transition: position .1s ease;
+				~ .less {
+           position: absolute;
+					opacity:0;
+					visibility: hidden;
+					transition: all .3s ease-in;
+				}
+				~ .more {
+					opacity:1;
+					visibility: visible;
+					transition: all .3s ease-in;
+				}
+			}
+			~ .less {
+					opacity:1;
+					visibility: visible;
+					transition: all .3s ease-in;
+				}
+				~ .more {
+          position: absolute;
+					opacity:0;
+					visibility: hidden;
+					transition: all .3s ease-in;
+				}
+		  }
+	  }
   }
 }
