--- a/sass/abstracts/variables/_colors.scss
+++ b/sass/abstracts/variables/_colors.scss
@@ -33,3 +33,4 @@ $color-input-search-border:#e1e1de;
 $color-text-search-field: #63605c;
 $color-number-light-grey: #3d393599;
 $color-text-green:#7bceb1;
+$hot-bg: #e0628754;
