--- a/sass/components/content/_posts-and-pages.scss
+++ b/sass/components/content/_posts-and-pages.scss
@@ -64,7 +64,7 @@ main {
     display: flex;
     flex-direction: row;
     height: 65px;
-	margin-bottom: 30px;
+    margin-bottom: 30px;
   }
   &__input-wrap {
     flex-basis: 50%;
@@ -201,16 +201,17 @@ main {
         .filter-main__dropdown-item--head {
           color: $color-text-green;
         }
-		.filter-main__dropdown-item label:not(.checkbox-toggle-label):before {
-			border-color:$color-text-green;
-		}
-		.filter-main__dropdown-item label:hover:before {
-			background-color:$color-text-green;
-		}
-		 .filter-main__dropdown-item .filter-main__dropdown-checkbox:checked + label:before {
-			background-color:$color-text-green;
-			
-		}
+        .filter-main__dropdown-item label:not(.checkbox-toggle-label):before {
+          border-color: $color-text-green;
+        }
+        .filter-main__dropdown-item label:hover:before {
+          background-color: $color-text-green;
+        }
+        .filter-main__dropdown-item
+          .filter-main__dropdown-checkbox:checked
+          + label:before {
+          background-color: $color-text-green;
+        }
       }
     }
     &--double-col {
@@ -220,20 +221,16 @@ main {
       :nth-child(1).filter-main__dropdown-list {
         margin-right: 30px;
       }
-	
     }
     &-item {
       font-size: 17px;
       font-weight: 300;
-		
-	  
-	  
 
       label {
         display: flex;
         flex-direction: row;
         align-items: center;
-		line-height: 1.8;
+        line-height: 1.8;
         cursor: pointer;
         position: relative;
         &:not(.checkbox-toggle-label):before {
@@ -249,20 +246,15 @@ main {
           background-size: 11px 10px;
           background-repeat: no-repeat;
           background-position: center;
-		  transition: all .3s ease-in;
-		 
+          transition: all 0.3s ease-in;
         }
-		 &:hover:before {
-			  background-color: $color-text-title;
-		  }
-		&.checkbox-toggle-label {
-			display: block;
-			padding-top: 12px;
-			
-		}
-
-		
-	
+        &:hover:before {
+          background-color: $color-text-title;
+        }
+        &.checkbox-toggle-label {
+          display: block;
+          padding-top: 12px;
+        }
       }
 
       input {
@@ -280,15 +272,14 @@ main {
         text-transform: uppercase;
         color: $color-number-light-grey;
         &.toggle {
-			
           font-size: 12px;
           text-transform: unset;
           text-align: left;
           &-select {
-           display: block;;
+            display: block;
           }
           &-deselect {
-            display: none;;
+            display: none;
           }
         }
       }
@@ -305,10 +296,10 @@ main {
       &--toggle {
         &.hide {
           + span.toggle-select {
-           display: none;
+            display: none;
           }
           ~ span.toggle-deselect {
-           display: block;;
+            display: block;
           }
         }
       }
@@ -316,12 +307,10 @@ main {
   }
 
   .filter-main__dropdown-checkbox:checked + label:before {
-
-			background-color:$color-text-title;
-			background-image: url(assets/image/-e-checkmark.svg);
-			transition: all .3s ease-in;
-		}
-
+    background-color: $color-text-title;
+    background-image: url(assets/image/-e-checkmark.svg);
+    transition: all 0.3s ease-in;
+  }
 
   & :nth-last-child(2).filter-main__dropdown-wrap .filter-main__dropdown-btn {
     border-top-right-radius: 30px;
@@ -329,74 +318,221 @@ main {
   }
 
   &__posts {
-	  .filter-main{
-		  &__tags{width: 100%;
-			position: relative;
-			//  display: flex;
-			//   flex-direction: row;
-			//   gap: 10px;
-				margin-bottom: 30px;}
-		  &__tag {
-			  display: inline-block;
-			 margin-right: 10px;
-			 margin-bottom: 10px;
-			padding: 5.5px 10px;
-			border: 1px solid  $color-input-search-border;
-			border-radius: 30px;
-			background-color: transparent;
-			font-size: 14px;
-    		font-weight: 400;
-			transition: position .3s ease-in;
-			span {
-				margin-left: 4px;
-				font-size: 14px;
+    .filter-main {
+      &__tags {
+        width: 100%;
+        position: relative;
+        //  display: flex;
+        //   flex-direction: row;
+        //   gap: 10px;
+        margin-bottom: 30px;
+      }
+      &__tag {
+        display: inline-block;
+        margin-right: 10px;
+        margin-bottom: 10px;
+        padding: 5.5px 10px;
+        border: 1px solid $color-input-search-border;
+        border-radius: 30px;
+        background-color: transparent;
+        font-size: 14px;
         font-weight: 400;
-        text-transform: uppercase;
-        color: $color-number-light-grey;
-        transition: all .3s ease-in;
-			}
-
-      &:hover {
-        color:$color-white-text;
-        border-color:$color-text-title;
-        background-color: $color-text-title;
-        	transition: all .3s ease-in;
+        transition: position 0.3s ease-in;
         span {
-        color:$color-white-text;
-        	transition: all .3s ease-in;
+          margin-left: 4px;
+          font-size: 14px;
+          font-weight: 400;
+          text-transform: uppercase;
+          color: $color-number-light-grey;
+          transition: all 0.3s ease-in;
+        }
 
+        &:hover {
+          color: $color-white-text;
+          border-color: $color-text-title;
+          background-color: $color-text-title;
+          transition: all 0.3s ease-in;
+          span {
+            color: $color-white-text;
+            transition: all 0.3s ease-in;
+          }
+        }
+
+        &.tag-hide {
+          opacity: 0;
+          position: absolute;
+          z-index: -1;
+          transition: position 0.1s ease;
+          ~ .less {
+            position: absolute;
+            opacity: 0;
+            visibility: hidden;
+            transition: all 0.3s ease-in;
+          }
+          ~ .more {
+            opacity: 1;
+            visibility: visible;
+            transition: all 0.3s ease-in;
+          }
+        }
+        ~ .less {
+          &:hover {
+            color: $color-white-text;
+          }
+          color: $color-number-light-grey;
+          opacity: 1;
+          visibility: visible;
+          transition: all 0.3s ease-in;
+        }
+        ~ .more {
+          &:hover {
+            color: $color-white-text;
+          }
+          color: $color-number-light-grey;
+          position: absolute;
+          opacity: 0;
+          visibility: hidden;
+          transition: all 0.3s ease-in;
         }
       }
-				
-			&.tag-hide{
-				opacity: 0;
-				position: absolute;
-				z-index: -1;
-				transition: position .1s ease;
-				~ .less {
-           position: absolute;
-					opacity:0;
-					visibility: hidden;
-					transition: all .3s ease-in;
-				}
-				~ .more {
-					opacity:1;
-					visibility: visible;
-					transition: all .3s ease-in;
-				}
-			}
-			~ .less {
-					opacity:1;
-					visibility: visible;
-					transition: all .3s ease-in;
-				}
-				~ .more {
+      &__items {
+        display: grid;
+        grid-gap: 30px;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+        grid-auto-flow: row;
+      }
+      &__item {
+        display: flex;
+        flex-direction: column;
+        text-align: left;
+        background-color: $color-white-text;
+        padding: 24px;
+        border-radius: 20px;
+        overflow: hidden;
+        transition: all 0.4s ease-in-out;
+
+        &:hover {
+          box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.07);
+          transition: all 0.4s ease-in-out;
+          .filter-main__item-location {
+            position: relative;
+            opacity: 0;
+            transform: translateX(200%);
+            transition: all 0.4s ease-in-out;
+            &.filter-main__item-tag {
+              // opacity:0;
+              // transition: all .05s ease-in-out;
+            }
+          }
+          .filter-main__item-arrow-link {
+            left: 15%;
+            opacity: 1;
+            transition: all 0.6s cubic-bezier(0, -1.6, 0.6, 2);
+          }
+        }
+        &-head {
+          display: flex;
+          flex-direction: row;
+          align-items: flex-start;
+          margin: 0 0 25px 0;
+        }
+        &-caption {
+          font-size: 18px;
+          font-weight: 400;
+          margin: 0;
+        }
+        &-hot {
+          min-width: 33px;
+          height: auto;
+          margin-left: auto;
+          border-radius: 30px;
+          background-color: $hot-bg;
+          font-size: 12px;
+          line-height: 1.8;
+          color: $color-text-title;
+          text-align: center;
+        }
+        &-logo {
+          margin-left: 10px;
+        }
+        &-body {
+          margin-bottom: 15px;
+        }
+        &-description {
+          width: 95%;
+          font-size: 16px;
+          font-weight: 300;
+          margin: 0;
+        }
+        &-footer {
+          display: flex;
+          flex-direction: row;
+          justify-content: space-between;
+          align-content: center;
+          margin-top: auto;
+          position: relative;
+        }
+        &-arrow-link {
+          font-weight: 400;
+          opacity: 0;
+          font-size: 16px;
+          color: $color-text-title;
+          display: flex;
+          flex-direction: row;
+          align-items: center;
           position: absolute;
-					opacity:0;
-					visibility: hidden;
-					transition: all .3s ease-in;
-				}
-		  }
-	  }
+          transform: translate(-50%, -50%);
+          top: 50%;
+          left: -150%;
+          transition: all 0.5s ease-in-out;
+
+          svg {
+            min-width: 30px;
+            margin-left: 8px;
+          }
+        }
+        &-location {
+          opacity: 1;
+          flex-basis: 60%;
+          display: flex;
+          flex-direction: row;
+          align-items: center;
+          overflow: hidden;
+          transition: all 0.5s ease-in-out;
+
+          svg {
+            margin-right: 7px;
+            min-width: 11px;
+            height: auto;
+          }
+          &-tags {
+          }
+        }
+        &-tags {
+          display: flex;
+          flex-direction: row;
+          flex-wrap: wrap;
+          align-items: center;
+        }
+        &-tag {
+          font-size: 16px;
+          color: $color-number-light-grey;
+          line-height: 1.6;
+          span {
+            display: none;
+          }
+            &:not(:last-of-type) {
+              svg {
+                margin-right: 10px;
+              }
+            }
+
+          &:last-of-type i {
+            display: none;
+          }
+        }
+      }
+    }
   }
 }
