--- a/style.css
+++ b/style.css
@@ -941,7 +941,6 @@ textarea {
 --------------------------------------------- */
 .footer {
 	padding: 100px 0 75px;
-	position: fixed;
 	left: 0;
 	bottom: 0;
 	right: 0;
@@ -1439,7 +1438,9 @@ main {
 	background-color: #7bceb1;
 }
 
-.filter-main__dropdown-list--academy .filter-main__dropdown-item .filter-main__dropdown-checkbox:checked + label:before {
+.filter-main__dropdown-list--academy .filter-main__dropdown-item
+.filter-main__dropdown-checkbox:checked
++ label:before {
 	background-color: #7bceb1;
 }
 
@@ -1478,7 +1479,7 @@ main {
 	background-size: 11px 10px;
 	background-repeat: no-repeat;
 	background-position: center;
-	transition: all .3s ease-in;
+	transition: all 0.3s ease-in;
 }
 
 .filter-main__dropdown-item label:hover:before {
@@ -1538,7 +1539,7 @@ main {
 .filter-main .filter-main__dropdown-checkbox:checked + label:before {
 	background-color: #bc204b;
 	background-image: url(assets/image/-e-checkmark.svg);
-	transition: all .3s ease-in;
+	transition: all 0.3s ease-in;
 }
 
 .filter-main :nth-last-child(2).filter-main__dropdown-wrap .filter-main__dropdown-btn {
@@ -1562,7 +1563,7 @@ main {
 	background-color: transparent;
 	font-size: 14px;
 	font-weight: 400;
-	transition: position .3s ease-in;
+	transition: position 0.3s ease-in;
 }
 
 .filter-main__posts .filter-main__tag span {
@@ -1571,52 +1572,209 @@ main {
 	font-weight: 400;
 	text-transform: uppercase;
 	color: #3d393599;
-	transition: all .3s ease-in;
+	transition: all 0.3s ease-in;
 }
 
 .filter-main__posts .filter-main__tag:hover {
 	color: #fff;
 	border-color: #bc204b;
 	background-color: #bc204b;
-	transition: all .3s ease-in;
+	transition: all 0.3s ease-in;
 }
 
 .filter-main__posts .filter-main__tag:hover span {
 	color: #fff;
-	transition: all .3s ease-in;
+	transition: all 0.3s ease-in;
 }
 
 .filter-main__posts .filter-main__tag.tag-hide {
 	opacity: 0;
 	position: absolute;
 	z-index: -1;
-	transition: position .1s ease;
+	transition: position 0.1s ease;
 }
 
 .filter-main__posts .filter-main__tag.tag-hide ~ .less {
 	position: absolute;
 	opacity: 0;
 	visibility: hidden;
-	transition: all .3s ease-in;
+	transition: all 0.3s ease-in;
 }
 
 .filter-main__posts .filter-main__tag.tag-hide ~ .more {
 	opacity: 1;
 	visibility: visible;
-	transition: all .3s ease-in;
+	transition: all 0.3s ease-in;
 }
 
 .filter-main__posts .filter-main__tag ~ .less {
+	color: #3d393599;
 	opacity: 1;
 	visibility: visible;
-	transition: all .3s ease-in;
+	transition: all 0.3s ease-in;
+}
+
+.filter-main__posts .filter-main__tag ~ .less:hover {
+	color: #fff;
 }
 
 .filter-main__posts .filter-main__tag ~ .more {
+	color: #3d393599;
 	position: absolute;
 	opacity: 0;
 	visibility: hidden;
-	transition: all .3s ease-in;
+	transition: all 0.3s ease-in;
+}
+
+.filter-main__posts .filter-main__tag ~ .more:hover {
+	color: #fff;
+}
+
+.filter-main__posts .filter-main__items {
+	display: grid;
+	grid-gap: 30px;
+	grid-template-columns: 1fr 1fr 1fr;
+	grid-template-rows: 1fr 1fr;
+	grid-auto-flow: row;
+}
+
+.filter-main__posts .filter-main__item {
+	display: flex;
+	flex-direction: column;
+	text-align: left;
+	background-color: #fff;
+	padding: 24px;
+	border-radius: 20px;
+	overflow: hidden;
+	transition: all 0.4s ease-in-out;
+}
+
+.filter-main__posts .filter-main__item:hover {
+	box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.07);
+	transition: all 0.4s ease-in-out;
+}
+
+.filter-main__posts .filter-main__item:hover .filter-main__item-location {
+	position: relative;
+	opacity: 0;
+	transform: translateX(200%);
+	transition: all 0.4s ease-in-out;
+}
+
+.filter-main__posts .filter-main__item:hover .filter-main__item-arrow-link {
+	left: 15%;
+	opacity: 1;
+	transition: all 0.6s cubic-bezier(0, -1.6, 0.6, 2);
+}
+
+.filter-main__posts .filter-main__item-head {
+	display: flex;
+	flex-direction: row;
+	align-items: flex-start;
+	margin: 0 0 25px 0;
+}
+
+.filter-main__posts .filter-main__item-caption {
+	font-size: 18px;
+	font-weight: 400;
+	margin: 0;
+}
+
+.filter-main__posts .filter-main__item-hot {
+	min-width: 33px;
+	height: auto;
+	margin-left: auto;
+	border-radius: 30px;
+	background-color: #e0628754;
+	font-size: 12px;
+	line-height: 1.8;
+	color: #bc204b;
+	text-align: center;
+}
+
+.filter-main__posts .filter-main__item-logo {
+	margin-left: 10px;
+}
+
+.filter-main__posts .filter-main__item-body {
+	margin-bottom: 15px;
+}
+
+.filter-main__posts .filter-main__item-description {
+	width: 95%;
+	font-size: 16px;
+	font-weight: 300;
+	margin: 0;
+}
+
+.filter-main__posts .filter-main__item-footer {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	align-content: center;
+	margin-top: auto;
+	position: relative;
+}
+
+.filter-main__posts .filter-main__item-arrow-link {
+	font-weight: 400;
+	opacity: 0;
+	font-size: 16px;
+	color: #bc204b;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	position: absolute;
+	transform: translate(-50%, -50%);
+	top: 50%;
+	left: -150%;
+	transition: all 0.5s ease-in-out;
+}
+
+.filter-main__posts .filter-main__item-arrow-link svg {
+	min-width: 30px;
+	margin-left: 8px;
+}
+
+.filter-main__posts .filter-main__item-location {
+	opacity: 1;
+	flex-basis: 60%;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	overflow: hidden;
+	transition: all 0.5s ease-in-out;
+}
+
+.filter-main__posts .filter-main__item-location svg {
+	margin-right: 7px;
+	min-width: 11px;
+	height: auto;
+}
+
+.filter-main__posts .filter-main__item-tags {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	align-items: center;
+}
+
+.filter-main__posts .filter-main__item-tag {
+	font-size: 16px;
+	color: #3d393599;
+	line-height: 1.6;
+}
+
+.filter-main__posts .filter-main__item-tag span {
+	display: none;
+}
+
+.filter-main__posts .filter-main__item-tag:not(:last-of-type) svg {
+	margin-right: 10px;
+}
+
+.filter-main__posts .filter-main__item-tag:last-of-type i {
+	display: none;
 }
 
 /* Comments
